--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,11 @@
     font-family: 'sfuiDisplayBold';
     src: local('sfuiDisplayBold'), url('assets/fonts/SFUIDisplay/sf-ui-display-bold-58646a511e3d9.otf') format('truetype');
 }
+@font-face {
+    font-family: 'sfuiDisplayUltraLight';
+    src: local('sfuiDisplayUltraLight'), url('assets/fonts/SFUIDisplay/sf-ui-display-ultralight-58646b19bf205.otf') format('truetype');
+}
+
 
 ol,ul {
     padding: 0 !important;
