added buttons any state timer

--- a/src/components/taskManager/manualDescription/manualDescription.module.scss
+++ b/src/components/taskManager/manualDescription/manualDescription.module.scss
@@ -10,7 +10,7 @@
     text-indent: -.7em;
     &::before {
       content: "• ";
-      color: var(--red-color-prime);
+      color: var(--pause-color);
     }
   }
 }
