--- a/src/components/uiux/inputs/taskInput/taskInput.module.scss
+++ b/src/components/uiux/inputs/taskInput/taskInput.module.scss
@@ -1,8 +1,8 @@
 .task-input {
   padding: 19px 15px;
-  background-color: var(--bg-gray-color-prime);
+  background-color: var(--bg-play-color);
   max-width: 370px;
   width: 100%;
   border: none;
-  color: var(--gray-font-color-prime);
+  color: var(--play-font-color);
 }
